--- a/src/components/Objection/Objection.module.scss
+++ b/src/components/Objection/Objection.module.scss
@@ -9,7 +9,8 @@
     font-size: 20px;
 
     h1 {
-        margin-top: 34px;
+        margin: 34px auto;
+        width: 80%;
         text-align: center;
         font-size: 40px;
         font-weight: 500;
