--- a/src/components/Stories/Stories.module.scss
+++ b/src/components/Stories/Stories.module.scss
@@ -1,6 +1,8 @@
 .Stories {
-    width: 288px;
-    height: 539px;
-    box-shadow: 7px 14px 27px rgba(0, 0, 0, 0.1);
-    border-radius: 45px;
+    img {
+        width: 288px;
+        height: 539px;
+        box-shadow: 7px 14px 27px rgba(0, 0, 0, 0.1);
+        border-radius: 45px;
+    }
 }
