--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@ body {
 
 * {
   font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #272729;
 }
 
 h3 {
@@ -50,4 +51,37 @@ header {
   height: 100%;
   background-color:rgba(0, 0, 0, 0.5);
   z-index: 1;
+}
+
+.video {
+  width: 519px;
+  height: 519px;
+  border-radius: 50px; 
+  overflow: hidden; 
+}
+
+.objection519 {
+  width: 519px;
+  height: 519px;
+
+  background-color: #FBFBFD;
+  border-radius: 50px;
+  font-weight: 550;
+
+  h1 {
+    margin: 34px auto;
+    width: 80%;
+    text-align: center;
+    font-size: 38px;
+    font-weight: 500;
+  }
+
+  p {
+    font-size: 20px;
+    margin: 0 80px;
+  }
+
+  span {
+    color: #6F6F6F;
+  }
 }
